Fixed length of options box on mobile

--- a/assets/global.scss
+++ b/assets/global.scss
@@ -52,6 +52,12 @@ body, .sticky-footer-container {
   }
 }
 
+@media (max-width: 1280px) {
+  .col-auto {
+    width: 100% !important;
+  }
+}
+
 .input-group {
   > .input-group-prepend {
     flex: 0 0 20%;
